Antrl4/Polynomial/PolynomialParser.cs
//------------------------------------------------------------------------------
// <auto-generated>
//     This code was generated by a tool.
//     ANTLR Version: 4.7.1
//
//     Changes to this file may cause incorrect behavior and will be lost if
//     the code is regenerated.
// </auto-generated>
//------------------------------------------------------------------------------

// Generated from Polynomial.g4 by ANTLR 4.7.1

// Unreachable code detected
#pragma warning disable 0162
// The variable '...' is assigned but its value is never used
#pragma warning disable 0219
// Missing XML comment for publicly visible type or member '...'
#pragma warning disable 1591
// Ambiguous reference in cref attribute
#pragma warning disable 419

using System;
using System.IO;
using System.Text;
using System.Diagnostics;
using System.Collections.Generic;
using Antlr4.Runtime;
using Antlr4.Runtime.Atn;
using Antlr4.Runtime.Misc;
using Antlr4.Runtime.Tree;
using DFA = Antlr4.Runtime.Dfa.DFA;

[System.CodeDom.Compiler.GeneratedCode("ANTLR", "4.7.1")]
[System.CLSCompliant(false)]
public partial class PolynomialParser : Parser {
	protected static DFA[] decisionToDFA;
	protected static PredictionContextCache sharedContextCache = new PredictionContextCache();
	public const int
		T__0=1, T__1=2, NUM=3, VAR=4, SIGN=5, WS=6;
	public const int
		RULE_polynomial = 0, RULE_monomial = 1;
	public static readonly string[] ruleNames = {
		"polynomial", "monomial"
	};

	private static readonly string[] _LiteralNames = {
		null, "'*'", "'^'", null, null, null, "' '"
	};
	private static readonly string[] _SymbolicNames = {
		null, null, null, "NUM", "VAR", "SIGN", "WS"
	};
	public static readonly IVocabulary DefaultVocabulary = new Vocabulary(_LiteralNames, _SymbolicNames);

	[NotNull]
	public override IVocabulary Vocabulary
	{
		get
		{
			return DefaultVocabulary;
		}
	}

	public override string GrammarFileName { get { return "Polynomial.g4"; } }

	public override string[] RuleNames { get { return ruleNames; } }

	public override string SerializedAtn { get { return new string(_serializedATN); } }

	static PolynomialParser() {
		decisionToDFA = new DFA[_ATN.NumberOfDecisions];
		for (int i = 0; i < _ATN.NumberOfDecisions; i++) {
			decisionToDFA[i] = new DFA(_ATN.GetDecisionState(i), i);
		}
	}

		public PolynomialParser(ITokenStream input) : this(input, Console.Out, Console.Error) { }

		public PolynomialParser(ITokenStream input, TextWriter output, TextWriter errorOutput)
		: base(input, output, errorOutput)
	{
		Interpreter = new ParserATNSimulator(this, _ATN, decisionToDFA, sharedContextCache);
	}
	public partial class PolynomialContext : ParserRuleContext {
		public PolynomialContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_polynomial; } }
	 
		public PolynomialContext() { }
		public virtual void CopyFrom(PolynomialContext context) {
			base.CopyFrom(context);
		}
	}
	public partial class OnlyMonomialContext : PolynomialContext {
		public MonomialContext monomial() {
			return GetRuleContext<MonomialContext>(0);
		}
		public OnlyMonomialContext(PolynomialContext context) { CopyFrom(context); }
		public override void EnterRule(IParseTreeListener listener) {
			IPolynomialListener typedListener = listener as IPolynomialListener;
			if (typedListener != null) typedListener.EnterOnlyMonomial(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IPolynomialListener typedListener = listener as IPolynomialListener;
			if (typedListener != null) typedListener.ExitOnlyMonomial(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IPolynomialVisitor<TResult> typedVisitor = visitor as IPolynomialVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitOnlyMonomial(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class MonomialSumContext : PolynomialContext {
		public MonomialContext[] monomial() {
			return GetRuleContexts<MonomialContext>();
		}
		public MonomialContext monomial(int i) {
			return GetRuleContext<MonomialContext>(i);
		}
		public ITerminalNode[] SIGN() { return GetTokens(PolynomialParser.SIGN); }
		public ITerminalNode SIGN(int i) {
			return GetToken(PolynomialParser.SIGN, i);
		}
		public MonomialSumContext(PolynomialContext context) { CopyFrom(context); }
		public override void EnterRule(IParseTreeListener listener) {
			IPolynomialListener typedListener = listener as IPolynomialListener;
			if (typedListener != null) typedListener.EnterMonomialSum(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IPolynomialListener typedListener = listener as IPolynomialListener;
			if (typedListener != null) typedListener.ExitMonomialSum(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IPolynomialVisitor<TResult> typedVisitor = visitor as IPolynomialVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitMonomialSum(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public PolynomialContext polynomial() {
		PolynomialContext _localctx = new PolynomialContext(Context, State);
		EnterRule(_localctx, 0, RULE_polynomial);
		int _la;
		try {
			State = 17;
			ErrorHandler.Sync(this);
			switch ( Interpreter.AdaptivePredict(TokenStream,2,Context) ) {
			case 1:
				_localctx = new MonomialSumContext(_localctx);
				EnterOuterAlt(_localctx, 1);
				{
				{
				State = 5;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
				if (_la==SIGN) {
					{
					State = 4; Match(SIGN);
					}
				}

				State = 7; monomial();
				}
				State = 13;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
				while (_la==SIGN) {
					{
					{
					State = 9; Match(SIGN);
					State = 10; monomial();
					}
					}
					State = 15;
					ErrorHandler.Sync(this);
					_la = TokenStream.LA(1);
				}
				}
				break;
			case 2:
				_localctx = new OnlyMonomialContext(_localctx);
				EnterOuterAlt(_localctx, 2);
				{
				State = 16; monomial();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class MonomialContext : ParserRuleContext {
		public MonomialContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_monomial; } }
	 
		public MonomialContext() { }
		public virtual void CopyFrom(MonomialContext context) {
			base.CopyFrom(context);
		}
	}
	public partial class RealMonomialContext : MonomialContext {
		public ITerminalNode VAR() { return GetToken(PolynomialParser.VAR, 0); }
		public ITerminalNode[] NUM() { return GetTokens(PolynomialParser.NUM); }
		public ITerminalNode NUM(int i) {
			return GetToken(PolynomialParser.NUM, i);
		}
		public RealMonomialContext(MonomialContext context) { CopyFrom(context); }
		public override void EnterRule(IParseTreeListener listener) {
			IPolynomialListener typedListener = listener as IPolynomialListener;
			if (typedListener != null) typedListener.EnterRealMonomial(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IPolynomialListener typedListener = listener as IPolynomialListener;
			if (typedListener != null) typedListener.ExitRealMonomial(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IPolynomialVisitor<TResult> typedVisitor = visitor as IPolynomialVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitRealMonomial(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class ConstContext : MonomialContext {
		public ITerminalNode NUM() { return GetToken(PolynomialParser.NUM, 0); }
		public ConstContext(MonomialContext context) { CopyFrom(context); }
		public override void EnterRule(IParseTreeListener listener) {
			IPolynomialListener typedListener = listener as IPolynomialListener;
			if (typedListener != null) typedListener.EnterConst(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IPolynomialListener typedListener = listener as IPolynomialListener;
			if (typedListener != null) typedListener.ExitConst(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IPolynomialVisitor<TResult> typedVisitor = visitor as IPolynomialVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitConst(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public MonomialContext monomial() {
		MonomialContext _localctx = new MonomialContext(Context, State);
		EnterRule(_localctx, 2, RULE_monomial);
		int _la;
		try {
			State = 29;
			ErrorHandler.Sync(this);
			switch ( Interpreter.AdaptivePredict(TokenStream,5,Context) ) {
			case 1:
				_localctx = new RealMonomialContext(_localctx);
				EnterOuterAlt(_localctx, 1);
				{
				State = 20;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
				if (_la==NUM) {
					{
					State = 19; Match(NUM);
					}
				}

				State = 23;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
				if (_la==T__0) {
					{
					State = 22; Match(T__0);
					}
				}

				State = 25; Match(VAR);
				State = 26; Match(T__1);
				State = 27; Match(NUM);
				}
				break;
			case 2:
				_localctx = new ConstContext(_localctx);
				EnterOuterAlt(_localctx, 2);
				{
				State = 28; Match(NUM);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}


	public static readonly ATN _ATN =
		new ATNDeserializer().Deserialize(_serializedATN);


}
